# sleeper_fantasy_api

./: .gitignore  .pylintrc  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  pytest.yml
examples/: example_advanced_usage.py  example_basic_usage.py  example_basic_usage_all_endpoints.py  example_player_endpoint_search_queries.py  get_user_and_leagues_by_name.ipynb  player_endpoint_searching_examples.ipynb
sleeper_api/: __init__.py  client.py  config.py  exceptions.py  requirements.txt  utils.py
sleeper_api/endpoints/: __init__.py  draft_endpoint.py  league_endpoint.py  player_endpoint.py  user_endpoint.py
sleeper_api/models/: __init__.py  brackets.py  draft.py  league.py  matchups.py  picks.py  player.py  roster.py  traded_picks.py  transactions.py  user.py
sleeper_api/resources/: __init__.py
sleeper_api/tests/: README.md
tests/: README.md  test_client.py  test_endpoint_draft.py  test_endpoint_league.py  test_endpoint_player.py  test_endpoint_user.py  test_integration.py  test_model_brackets.py  test_model_draft.py  test_model_league.py  test_model_matchups.py  test_model_picks.py  test_model_player.py  test_model_roster.py  test_model_traded_picks.py  test_model_transactions.py  test_model_user.py  test_performance.py  test_user.py
